--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose-paginate-v2": "^1.8.3",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
