--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "passport-local": "^1.0.0",
     "puppeteer": "^23.5.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "twilio": "^5.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
