--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.15",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^8.4.4",
     "mongoose-paginate-v2": "^1.8.3",
