--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^1.41.3",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
@@ -38,6 +39,7 @@
     "mongoose-paginate-v2": "^1.8.3",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
