--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "nest start",
     "dev": "nodemon",
-    "build": "nest build",
+    "build": "nest build && npm run copy-assets",
+    "copy-assets": "cp -r src/template dist/",
     "start:prod": "node dist/main",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:debug": "nest start --debug --watch",
